--- a/SmokeMeter/Base.lproj/Main.storyboard
+++ b/SmokeMeter/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="XUk-UX-VdF">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="XUk-UX-VdF">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -95,7 +95,7 @@
         <!--Timer View Controller-->
         <scene sceneID="ox3-ml-GLl">
             <objects>
-                <viewController id="auf-gR-A0I" customClass="TimerViewController" customModule="SmokeMeter" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="timerView" id="auf-gR-A0I" customClass="TimerViewController" customModule="SmokeMeter" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="brv-Ts-UUk"/>
                         <viewControllerLayoutGuide type="bottom" id="Fyd-Ng-d99"/>
